[gd_scene load_steps=13 format=2]

[ext_resource path="res://GUI/TitleScreenStuff/NewScreenStuff/Title3.png" type="Texture" id=1]
[ext_resource path="res://GUI/TitleScreenStuff/Mini-Golf-yellow-ball-web.jpg" type="Texture" id=2]
[ext_resource path="res://GUI/TitleScreenStuff/NewScreenStuff/Practice2.png" type="Texture" id=3]
[ext_resource path="res://GUI/TitleScreenStuff/NewScreenStuff/Practice1.png" type="Texture" id=4]
[ext_resource path="res://GUI/TitleScreenStuff/NewScreenStuff/Play2.png" type="Texture" id=5]
[ext_resource path="res://GUI/TitleScreenStuff/NewScreenStuff/Play1.png" type="Texture" id=6]
[ext_resource path="res://GUI/TitleScreenStuff/NewScreenStuff/ExitGame1.png" type="Texture" id=7]
[ext_resource path="res://GUI/TitleScreenStuff/NewScreenStuff/ExitGame2.png" type="Texture" id=8]
[ext_resource path="res://Scenes/TitleScreen.gd" type="Script" id=9]
[ext_resource path="res://Assets/Fonts/coolvetica rg.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 27
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 10 )

[node name="TitleScreen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundPic" type="TextureRect" parent="."]
margin_right = 1600.0
margin_bottom = 899.0
texture = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1600.0
margin_bottom = 899.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 932.0
margin_bottom = 899.0

[node name="Title" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_right = 932.0
margin_bottom = 125.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 129.0
margin_right = 932.0
margin_bottom = 899.0
size_flags_vertical = 3

[node name="Play" type="TextureButton" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 932.0
margin_bottom = 137.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 5 )

[node name="Practice" type="TextureButton" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 141.0
margin_right = 932.0
margin_bottom = 262.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 3 )

[node name="Exit" type="TextureButton" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 266.0
margin_right = 932.0
margin_bottom = 390.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 394.0
margin_right = 932.0
margin_bottom = 428.0
custom_fonts/font = SubResource( 1 )
text = "By: Quinn Ogden & Westley Thompson"

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_right = 1600.0
margin_bottom = 899.0

[node name="HBoxContainer" type="HBoxContainer" parent="PopupMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -800.0
margin_top = 179.0
margin_right = 227.0
margin_bottom = 20.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupMenu/HBoxContainer"]
margin_left = 387.0
margin_right = 639.0
margin_bottom = 181.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PopupMenu/HBoxContainer/VBoxContainer"]
margin_right = 252.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )
text = "Choose your Course"
align = 1

[node name="Course1" type="Button" parent="PopupMenu/HBoxContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 252.0
margin_bottom = 61.0
text = "Course 1"

[node name="Course2" type="Button" parent="PopupMenu/HBoxContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 252.0
margin_bottom = 85.0
text = "Course 2"

[node name="Course3" type="Button" parent="PopupMenu/HBoxContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 252.0
margin_bottom = 109.0
text = "Course 3"

[node name="Course4" type="Button" parent="PopupMenu/HBoxContainer/VBoxContainer"]
margin_top = 113.0
margin_right = 252.0
margin_bottom = 133.0
text = "Course 4"

[node name="Course5" type="Button" parent="PopupMenu/HBoxContainer/VBoxContainer"]
margin_top = 137.0
margin_right = 252.0
margin_bottom = 157.0
text = "Course 5"

[node name="Back" type="Button" parent="PopupMenu/HBoxContainer/VBoxContainer"]
margin_top = 161.0
margin_right = 252.0
margin_bottom = 181.0
text = "Back"
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/Practice" to="." method="_on_Practice_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="PopupMenu/HBoxContainer/VBoxContainer/Course1" to="." method="_on_Course1_pressed"]
[connection signal="pressed" from="PopupMenu/HBoxContainer/VBoxContainer/Course2" to="." method="_on_Course2_pressed"]
[connection signal="pressed" from="PopupMenu/HBoxContainer/VBoxContainer/Course3" to="." method="_on_Course3_pressed"]
[connection signal="pressed" from="PopupMenu/HBoxContainer/VBoxContainer/Course4" to="." method="_on_Course4_pressed"]
[connection signal="pressed" from="PopupMenu/HBoxContainer/VBoxContainer/Course5" to="." method="_on_Course5_pressed"]
[connection signal="pressed" from="PopupMenu/HBoxContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
